--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald|Permanent+Marker&display=swap" rel="stylesheet">
     <!--font Awesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
-    <title>Store</title>
+    <title>Pottery Store & Studio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
